--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="conteiner">
-            <h1>Meu portal de notícias</h1>
+            <h1>Meu portal de notícias!</h1>
             <nav>
                 <ul>
                     <li>
