--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu portal de notícias!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             <h2>Esportes</h2>
            <div class="articles">
             <article>
-                <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
+                <img src="fotos para trabalho ebac/imagens/futebol.jpg" alt="Bola de futebol no gramado" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -50,7 +50,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./imagens/futebol-americano.jpg"
+                <img src="fotos para trabalho ebac/imagens/futebol-americano.jpg"
                     alt="Jogador de futebol americano correndo com a bola na mão" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
@@ -64,7 +64,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                <img src="fotos para trabalho ebac/imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -86,7 +86,7 @@
                 <h2>Economia</h2>
                 <div class="articles">
                     <article>
-                        <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
+                        <img src="fotos para trabalho ebac/imagens/dolares.jpg" alt="Muitos dólares" />
                         <header>
                             <time class="creation-date">13/07/2022 às 12:35</time>
                         </header>
@@ -99,7 +99,7 @@
                         <a href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                     <article>
-                        <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
+                        <img src="fotos para trabalho ebac/imagens/euro.jpg" alt="Várias notas de euro" />
                         <header>
                             <time>13/07/2022 às 12:35</time>
                         </header>
@@ -112,7 +112,7 @@
                         <a href="#" title="Leia a notícia completa">Ler mais</a>
                     </article>
                     <article>
-                        <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" height="180"
+                        <img src="fotos para trabalho ebac/imagens/petroleo.jpg" alt="Extração de petróleo" height="180"
                         width="270.87"/>
                         <header>
                             <time>13/07/2022 às 12:35</time>
@@ -138,7 +138,7 @@
                     <div class="articles">
                         <article> 
                             <img src="fotos para trabalho ebac/popcorn-1085072_1280.jpg" alt="pipoca" height="180"
-                            width="254.87" />
+                            width="270.87" />
                         <header>
                             <time>08/12/2022 às 00:30</time>
                         </header>
@@ -153,7 +153,7 @@
 
                     <article> 
                         <img src="fotos para trabalho ebac/entretenimento/children-9236465_1280.jpg" alt="children" height="180"
-                        width="254.87"/>
+                        width="270.87"/>
                     <header>
                         <time>08/12/2022 às 00:30</time>
                     </header>
@@ -167,7 +167,7 @@
                 </article>
                 <article> 
                     <img src="fotos para trabalho ebac/entretenimento/headphones-4595492_1280.jpg" alt="music" height="180"
-                    width="254.87"/>
+                    width="270.87"/>
                 <header>
                     <time>08/12/2022 às 00:30</time>
                 </header>
@@ -192,7 +192,7 @@
                         <div class="articles">
                             <article>
                                 <img src="fotos para trabalho ebac/recycling-4999006_1280.jpg" alt="tecnologia" height="180"
-                                width="254.87"/>
+                                width="270.87"/>
                             <header>
                                 <time>08/12/2022 às 00:30</time>
                             </header>
@@ -206,7 +206,7 @@
                             </article>
                             <article>
                                 <img src="fotos para trabalho ebac/entretenimento/laptop-5673901_1280.jpg" alt="tecnologia" height="180"
-                                width="254.87"/>
+                                width="270.87"/>
                             <header>
                                 <time>08/12/2022 às 00:30</time>
                             </header>
@@ -221,7 +221,7 @@
 
                             <article>
                                 <img src="fotos para trabalho ebac/entretenimento/technology-1283624_1280 (1).jpg" alt="tecnologia" height="180"
-                                width="254.87"/>
+                                width="270.87"/>
                             <header>
                                 <time>08/12/2022 às 00:30</time>
                             </header>
